# pipeline_ecommerce_desafio2

./: .gitignore  Dockerfile  README.md  dashboard_apresentacao.html  docker-compose.yml  pyproject.toml
dags/: pipeline_ecommerce.py
data/: devolucoes.csv  estoque.csv  vendas.csv
scripts/: carregar.py  extrair.py
sql/: 01_vendas.sql  02_devolucoes.sql  03_estoque.sql  DDL_dw_ecommerce.sql  DDL_staging_ecommerce.sql  DML_dw_ecommerce.sql  DML_staging_ecommerce.sql  diagrama_ecommerce.pgerd  queries_analiticas.sql
