[project]
name = "projeto-pipeline-ecommerce"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=3.0.2",
    "pathlib>=1.0.1",
    "psycopg2-binary>=2.9.12",
    "python-dotenv>=1.2.2",
    "python-pptx>=1.0.2",
    "sqlalchemy>=2.0.49",
]
